manifests/prod/journal/journal-app-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-access-prod-public
  namespace: journal--prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-elife-oauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "journal-prod-dev-access.elifesciences.org"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: journal-app-prod-public
                port:
                  number: 80
  tls:
    - hosts:
        - "journal-prod-dev-access.elifesciences.org"
      secretName: "journal-prod-dev-access.elifesciences.org-tls"
